#fixes for CRM-4605
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23097 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -699,8 +699,7 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 }
 
 #crm-container .element-right {
-  position: absolute;
-  right: 35px;
+    float : right;
 }
 
 #crm-container #search-status {
