small fix for CRM-4860
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23120 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/packages/jquery/css/menu.css
+++ b/packages/jquery/css/menu.css
@@ -43,6 +43,7 @@ html>body .innerbox
 #root-menu-div li{
 	white-space:nowrap;
 	background-image: none;
+	text-align: left;
 }
 * html #root-menu-div li{
 	height: 1.5em; /* fixing ie6 problem */
