more blue to grey tranformation, CRM-4860
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23121 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1791,3 +1791,16 @@ div.grippie {
 #crm-container hr {
    background-color : #B0B0B0;
 }
+
+#crm-container th.contriTotalRight {
+   border-right: 1px solid #999999;
+}
+
+#crm-container th.contriTotalLeft {
+   border-left: 1px solid #999999;
+}
+
+#crm-container th.softTotal {
+   border-left: 1px solid #999999;
+   border-right: 1px solid #999999;
+}
