--- a/packages/jquery/css/token-input-facebook.css
+++ b/packages/jquery/css/token-input-facebook.css
@@ -3,7 +3,7 @@ ul.token-input-list-facebook {
     height: auto !important; 
     height: 1%;
     width: 400px;
-    border: 1px solid #8496ba;
+    border: 1px solid #494949;
     cursor: text;
     font-size: 12px;
     font-family: Verdana;
@@ -36,7 +36,7 @@ li.token-input-token-facebook {
     background-color: #eff2f7;
     color: #000;
     cursor: default;
-    border: 1px solid #ccd5e4;
+    border: 1px solid #494949;
     font-size: 11px;
     border-radius: 5px;
     -moz-border-radius: 5px;
