more blue to grey tranformation, CRM-4860
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23125 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/packages/jquery/css/token-input-facebook.css
+++ b/packages/jquery/css/token-input-facebook.css
@@ -117,7 +117,7 @@ div.token-input-dropdown-facebook ul li em {
 }
 
 div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-facebook {
-    background-color: #3b5998;
+    background-color: #999999;
     color: #fff;
 }
 
