more blue to grey tranformation, CRM-4860
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23132 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1401,6 +1401,11 @@ body .ac_loading {
   background       : white url(../i/magnify.gif) no-repeat scroll right center;
 }
 
+.ac_over {
+	background-color: #999999;
+	color: white;
+}
+
 /*class for CMS user name check used in profile*/
 .cmsmessagebox {
    position    : absolute;
