--- a/packages/jquery/css/token-input-facebook.css
+++ b/packages/jquery/css/token-input-facebook.css
@@ -33,7 +33,7 @@ li.token-input-token-facebook {
     height: 1%;
     margin: 3px;
     padding: 1px 3px;
-    background-color: #eff2f7;
+    background-color: #ebece4;
     color: #000;
     cursor: default;
     border: 1px solid #494949;
@@ -58,8 +58,8 @@ li.token-input-token-facebook span {
 }
 
 li.token-input-selected-token-facebook {
-    background-color: #5670a6;
-    border: 1px solid #3b5998;
+    background-color: #999999;
+    border: 1px solid #ebece4;
     color: #fff;
 }
 
