fixed for CRM-4860
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23138 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -375,7 +375,7 @@ div.spacer, .spacer {
   padding: 0.5em;
   background-color: #999999;
   font-weight: bold;
-  color: #BADAFF;
+  color: #FAFAFA;
 }
 
 #crm-container div.display-block {
