fancied up the menu in standalone a little
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23153 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/standalone.css
+++ b/css/standalone.css
@@ -39,3 +39,14 @@ img, a img {
 .crm_blocktitle {
   font-size:75%;
 }
+
+div.cmDiv {
+  opacity: .9;
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
+  filter: alpha(opacity=90);
+  shadow
+}
+
+.clickMenu {
+  font-family: Arial, Helvetica, Tahoma, sans-serif;
+}
