--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -99,7 +99,7 @@ div.spacer, .spacer {
 }
   
 #crm-container .form-submit {
-  margin: 0em 0.5em 0.25em 0;
+  margin: .25em 0.5em 0.25em 0;
 }
 
 #crm-container .form-submit-inline {
