fixing the problem with pager as reported by Dave
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23166 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -700,6 +700,7 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
 
 #crm-container .element-right {
     float : right;
+    margin-right: 35px;
 }
 /*
 #crm-container div.crm-pager .element-right {
