worked on CRM-4829
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23182 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -13,8 +13,10 @@
 #crm-container .medium {width: 12em;}
 #crm-container .big {width: 15em;}
 #crm-container .huge {width: 25em;}
+#crm-container .huge40 {width: 40em;}
 #crm-container textarea.big {width: 35em; height: 4em;}
 #crm-container textarea.huge {width: 45em; height: 16em;}
+#crm-container textarea.huge12 {width: 40em; height: 12em;}
 #crm-container textarea.huge40 {width: 40em; height: 16em;}
 #crm-container textarea.nowrap {width: 45em; height: 4.5em; white-space: nowrap; overflow: auto;}
 #crm-container .bigSelect {width: 15em; height: 12em;}
