fixed missing / wrong {ts} in templates
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23196 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -88,7 +88,7 @@ div.spacer, .spacer {
   font-weight: bold;
 }
 
-#crm-container input[type="text"] {
+#crm-container input[type="text"], #crm-container input[type="password"] {
   border: 1px solid #494949;
   font-size:12px;
   font-size-adjust:none;
