--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -763,7 +763,7 @@ div.crm-pager a {
 #crm-container .data-group-first {
   margin: 10px 5px 5px 5px;
   padding: 5px;
-  border-top: 2px solid #85ACE8;
+  border-top: 2px solid #999999;
   clear: none;
 }
 
