--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1797,7 +1797,7 @@ div.grippie {
    border-bottom:1px solid #E2E2E2;
 }
 
-#crm-container a:link, a:visited {
+#crm-container a:visited {
    color : #494949;
 }
 
