--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -99,6 +99,10 @@ div.spacer, .spacer {
   line-height:100%;
   vertical-align:middle;
 }
+
+#crm-container textarea {
+    border: 1px solid #494949;
+}
   
 #crm-container .form-submit {
   margin: .25em 0.5em 0.25em 0;
