fixed joomla admin menu height http://forum.civicrm.org/index.php/topic,9430.0.html
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23355 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/packages/jquery/css/menu.css
+++ b/packages/jquery/css/menu.css
@@ -338,8 +338,14 @@ div.m ul#civicrm-menu {
     position:relative;
     border: none;
     left:0px;
+    height:0px;
     padding: 5px 0px 20px 2px;
 }
+
+div.m ul#civicrm-menu li#crm-qsearch {
+    height:0px;
+}
+
 div#submenu-box ul#civicrm-menu, .m ul#civicrm-menu li.menumain{
     background-color:#555555;
 }
