small fix, rounded headers / status message corner specific to mozilla (online contribution/event page, User Dashboard)
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23368 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -328,6 +328,7 @@ div.spacer, .spacer {
   background-color: #ffff99;
   padding: .25em .5em .25em .5em;
   border: 1px solid #696969;
+  -moz-border-radius: 2px 2px 2px 2px;
 }
 
 #crm-container div.view-data {
@@ -382,6 +383,7 @@ div.spacer, .spacer {
   background-color: #999999;
   font-weight: bold;
   color: #FAFAFA;
+  -moz-border-radius: 2px 2px 2px 2px;
 }
 
 #crm-container div.display-block {
