--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -255,7 +255,7 @@ div.spacer, .spacer {
 #crm-container .form-layout td {
   vertical-align: top;
   padding: 5px;
-  white-space: nowrap;
+  white-space: normal;
 }
 
 #crm-container .form-layout td.report, #crm-container .form-layout td.description, #crm-container .form-layout-compressed td.description {
@@ -280,6 +280,9 @@ div.spacer, .spacer {
   padding: 0.5em 0.50em 0em 0.75em;
   border: 0px none;
   vertical-align: top;
+}
+#crm-container .form-layout td.label, #crm-container .form-layout-compressed td.label {
+  width: 20%;
 }
 
 #crm-container td.op-checkbox label {
