small fix for search status css
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23553 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -734,6 +734,10 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
  font-size: .95em;
  font-weight: bold;
  border: 1px solid #999999;
+ border-radius: 4px;
+ -moz-border-radius : 4px;
+ -webkit-border-radius : 4px;
+ -khtml-border-radius : 4px;
 }
 
 #crm-container #search-status ul {
