--- a/packages/jquery/css/menu.css
+++ b/packages/jquery/css/menu.css
@@ -125,8 +125,6 @@ li.blue {
 	color: blue;
 }
 
-
-
 /* syntaxhighlight stuff */
 .dp-highlighter
 {
@@ -340,12 +338,12 @@ div.m ul#civicrm-menu {
     left:0px;
     height:0px;
     padding: 5px 0px 20px 2px;
+    border-radius      : 4px;	
+    -moz-border-radius : 4px;	
+    -webkit-border-radius : 4px;	
+    -khtml-border-radius : 4px;
 }
 
 div.m ul#civicrm-menu li#crm-qsearch {
     height:0px;
-}
-
-div#submenu-box ul#civicrm-menu, .m ul#civicrm-menu li.menumain{
-    background-color:#555555;
 }
