--- a/css/joomla.css
+++ b/css/joomla.css
@@ -297,6 +297,7 @@ pre {
 table {
   /* make <td> sizes relative to body size! */
   font-size: 1em;
+  border-style:none !important;
 }
 .form-item label {
   font-size: 1em;
