typo / syntax error fixes..
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23588 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -59,7 +59,7 @@ div#crm-container {
   height: 2em;
 }
 
-#crm-container .add-remove-link. #crm-container .map-link {
+#crm-container .add-remove-link #crm-container .map-link {
   font-size: .9em;
 }
 
@@ -825,7 +825,7 @@ div.crm-pager a {
 /* Recently Viewed bar */
 .block-civicrm div#recently-viewed ul {
   font-size: .9em;
-  // overflow: hidden;
+  /* overflow: hidden; */
   margin: 0px;
   padding: 0px;
 }
