subtype: svn merge -r 23549:23588 http://svn.civicrm.org/civicrm/trunk
git-svn-id: http://svn.civicrm.org/civicrm/branches/subtype@23591 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -59,7 +59,7 @@ div#crm-container {
   height: 2em;
 }
 
-#crm-container .add-remove-link. #crm-container .map-link {
+#crm-container .add-remove-link #crm-container .map-link {
   font-size: .9em;
 }
 
@@ -734,6 +734,10 @@ div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
  font-size: .95em;
  font-weight: bold;
  border: 1px solid #999999;
+ border-radius: 4px;
+ -moz-border-radius : 4px;
+ -webkit-border-radius : 4px;
+ -khtml-border-radius : 4px;
 }
 
 #crm-container #search-status ul {
@@ -821,7 +825,7 @@ div.crm-pager a {
 /* Recently Viewed bar */
 .block-civicrm div#recently-viewed ul {
   font-size: .9em;
-  // overflow: hidden;
+  /* overflow: hidden; */
   margin: 0px;
   padding: 0px;
 }
