fixes for CRM-5052
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.0@23706 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1830,3 +1830,15 @@ div.grippie {
 #crm-container th.contriTotalLeft {
    border-left: 1px solid #999999;
 }
+
+#crm-container .collapsed {
+   background: url("../i/TreePlus.gif") no-repeat 0 0;
+   padding-left: 19px;
+   cursor:pointer
+}
+
+#crm-container .expanded {
+   background: url("../i/TreeMinus.gif") no-repeat 0 0;
+   padding-left: 19px;
+   cursor:pointer
+}
