#CRM-4312 #implemented for contribution settings page(Demo)
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23813 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1842,3 +1842,12 @@ div.grippie {
    padding-left: 19px;
    cursor:pointer
 }
+
+/* TimeEntry styles */
+.timeEntry_control {
+   vertical-align: middle;
+   margin-left: 2px;
+}
+* html .timeEntry_control { /* IE only */
+   margin-top: -4px;
+}
