--- a/packages/jquery/css/dataTable.css
+++ b/packages/jquery/css/dataTable.css
@@ -102,38 +102,37 @@
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * DataTables display
  */
-table.display {
+#crm-container table.display {
 	margin: 0 auto;
 	width: 100%;
 	clear: both;
 }
 
-table.display thead th {
-	padding: 3px 18px 3px 10px;
+#crm-container table.display thead th {
+	padding:3px 25px 4px 10px;
 	border-bottom: 1px solid black;
 	font-weight: bold;
 	cursor: pointer;
 	* cursor: hand;
 }
 
-table.display tfoot th {
+#crm-container table.display tfoot th {
 	padding: 3px 10px;
 	border-top: 1px solid black;
 	font-weight: bold;
 }
 
-table.display tr.heading2 td {
+#crm-container table.display tr.heading2 td {
 	border-bottom: 1px solid #aaa;
 }
 
-table.display td {
+#crm-container table.display td {
 	padding: 3px 10px;
 }
 
-table.display td.center {
+#crm-container table.display td.center {
 	text-align: center;
 }
-
 
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -304,7 +303,7 @@ table.display tr.odd.row_selected td {
  */
 /* For the standard odd/even */
 tr.odd td.sorting_1 {
-	background-color: #D3D6FF;
+	background-color: #C9CFC9;
 }
 
 tr.odd td.sorting_2 {
@@ -316,7 +315,7 @@ tr.odd td.sorting_3 {
 }
 
 tr.even td.sorting_1 {
-	background-color: #EAEBFF;
+	background-color: #F6F9F9;
 }
 
 tr.even td.sorting_2 {
