started work on CRM-4312
git-svn-id: http://svn.civicrm.org/civicrm/trunk@23890 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1851,3 +1851,9 @@ div.grippie {
 * html .timeEntry_control { /* IE only */
    margin-top: -4px;
 }
+
+/* This is the style for the trigger icon. The margin-bottom value causes the icon to shift down to center it. */
+.ui-datepicker-trigger {
+   margin-top: 4px;
+   margin-bottom: -6px;
+}
