added deprecate.css in drupal/joomla/standalone template files (make it easier to see if we are using elements on a page that we should be getting rid of)
began process of removing table.no-border class declaration from all templates (didn't want to mess with civicase) - for the most part, have used existing classes to target tables, otherwise we need to add classes to tables that should have no border, and the classes should "mean something" other than "get rid of border," but that is all waiting on good naming conventions...

fixed a bug where DDs we're being pushed down instead of to the right of DTs (my fault from last commit)

git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.1.usability@23924 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -254,8 +254,8 @@ div.spacer,
  	margin-left:23%;
 	}
 
-#crm-container div.form-item dd.html-adjust, #crm-container div.form-item dl.html-adjust dd{
-  float: left;
+#crm-container div.form-item dd.html-adjust, 
+#crm-container div.form-item dl.html-adjust dd{
   width: 57%;
   /*clear: right;*/
 }
@@ -277,7 +277,9 @@ div.spacer,
   text-align: left;
 } 
 
-#crm-container table.form-layout, #crm-container table.control-panel, #crm-container table.no-border {
+#crm-container table.form-layout, 
+#crm-container table.control-panel, 
+#crm-container table.no-border {
   margin: 0em;
   width: 98%;	
   border-collapse: collapse;
@@ -1022,9 +1024,8 @@ div.crm-pager a {
 }
 
 #crm-container div#searchForm table.form-layout {
-  border-collapse: separate;
-  border-spacing: 0;
-}
+  	border-spacing: 0;
+	}
 
 #crm-container div#searchForm table.form-layout td {
   padding: 4px;
@@ -1921,4 +1922,18 @@ div#toolTip {
     padding-left: 24px;
 	color: #ff6655 !important;
  }
+ 
+ 
+ 
+ /* specific, targeted fixes */
+ #crm-container .dashboard-elements,
+ #crm-container #membership-listings,
+ #crm-container #premiums-listings,
+ #crm-container #searchForm table {
+  margin: 0em;
+  width: 98%;	
+  border-collapse: collapse;
+  border: 0px none;
+}
+ 
 
