--- a/css/deprecate.css
+++ b/css/deprecate.css
@@ -25,4 +25,11 @@
 }
 
 
+/* table border declarations to be replaced with dclarations for specific elements */
 
+ #crm-container table.no-border {
+  margin: 0em;
+  width: 98%;	
+  border-collapse: collapse;
+  border: 0px none;
+}
