worked on CRM-5167
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.0@24001 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/joomla.css
+++ b/css/joomla.css
@@ -4,7 +4,17 @@
 ** HTML elements
 */
 div#toolbar-box .icon-48-generic {
-  display: none
+  display: none;
+}
+
+div#toolbar-box {
+  height: 26px;
+}
+
+div#toolbar-box div.t, div#toolbar-box div.t div.t, div#toolbar-box div.t div.t div.t, div#toolbar-box div.m, div#toolbar-box div.b div.b, div#toolbar-box div.b, div#toolbar-box div.b div.b div.b {
+  background-image: none;
+  border-left: 0px;
+  border-right: 0px;
 }
 
 fieldset {
