--- a/packages/jquery/css/menu.css
+++ b/packages/jquery/css/menu.css
@@ -332,16 +332,28 @@ li#menu-logout {
 /** Joomla Admin Menu **/
 
 div.m ul#civicrm-menu {
-    z-index: 0;
+    z-index: 1;
     position:relative;
     border: none;
     left:0px;
     height:0px;
-    padding: 5px 0px 20px 2px;
+    padding-top:5px;
+    padding-right:0px;
+    padding-left:2px;
+    padding-bottom:20px !important; /*moz bottom */
+    padding-bottom:2px; /*ie bottom */
     border-radius      : 4px;	
     -moz-border-radius : 4px;	
     -webkit-border-radius : 4px;	
     -khtml-border-radius : 4px;
+}
+
+div#toolbar-box div.m{ 
+ padding: 0px 8px !important;
+}
+
+div#toolbar-box, div#toolbar-box div.m{
+  height: auto;
 }
 
 div.m ul#civicrm-menu li#crm-qsearch {
