--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1877,6 +1877,30 @@ div.m ul#civicrm-menu {
     -khtml-border-radius : 4px;
 	}
 
+div.m ul#civicrm-menu {
+    z-index: 1;
+    position:relative;
+    border: none;
+    left:0px;
+    height:0px;
+    padding: 5px 0px 20px 2px;
+    padding-bottom:20px !important; /*moz bottom */
+    padding-bottom:2px; /*ie bottom */
+    border-radius      : 4px;  
+    -moz-border-radius : 4px;  
+    -webkit-border-radius : 4px; 
+    -khtml-border-radius : 4px;
+	}
+
+
+div#toolbar-box div.m{ 
+ padding: 0px 8px !important;
+}
+
+div#toolbar-box, div#toolbar-box div.m{
+  height: auto;
+}
+
 div.m ul#civicrm-menu li#crm-qsearch {
     height:0px;
 	}
