minor fix, CRM-1744
git-svn-id: http://svn.civicrm.org/civicrm/trunk@24217 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/packages/jquery/css/dataTable.css
+++ b/packages/jquery/css/dataTable.css
@@ -167,6 +167,7 @@
 #crm-container tr.even td, #crm-container tr.odd td {
     border-collapse: collapse;
     border-top: 1px solid #DDDDDD;
+    border-bottom: 1px solid #DDDDDD;
 }
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * Misc
